test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_readln_expr.draco
proc main() void : a := readln(ch; a); corp;
