test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_error_as_identifier.draco
int error;
 
proc main() void : a := 1; corp;
